# kotkowo

./: .buildpacks  .env  .envrc  .formatter.exs  .gitignore  .gradient_ignore.exs  Dockerfile  README.md  RustConfig  coveralls.json  devenv.nix  docker-compose.yml  elixir_buildpack.config  flake.nix  init.sql  mix.exs  phoenix_static_buildpack.config
.github/workflows/: checks.yml  deploy.yml  push_docker.yml  release.yml  trigger.yml
assets/: .eslintrc.cjs  .prettierrc.js  node-packages.nix  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
assets/css/: app.css
assets/js/: app.js  app.ts
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: attribute.ex  kotkowo.ex  kotkowo_web.ex  strapi.ex
lib/kotkowo/: adopted_cat.ex  advice_handler.ex  announcement.ex  application.ex  article.ex  cat.ex  cats.ex  client.ex  gallery_image.ex  graphql_client.ex  mailer.ex  prom_ex.ex  repo.ex  type_utils.ex
lib/kotkowo/attributes/: color.ex  health_status.ex  seniority.ex  sex.ex
lib/kotkowo_web/: constants.ex  endpoint.ex  gettext.ex  router.ex  site_meta.ex  telemetry.ex  url_helper.ex  web_helpers.ex
native/client/: Cargo.toml
native/client/src/: lib.rs
native/strapiclient/: Cargo.toml  README.md
native/strapiclient/src/: error.rs  lib.rs  model.rs  primitives.rs  query.rs
native/strapiclient/src/model/: adopted_cat.rs  announcement.rs  article.rs  cat.rs  gallery_image.rs
native/strapiclient/src/query/: get_article.graphql  get_article.rs  get_article_for_announcement.graphql  get_article_for_announcement.rs  get_cat.graphql  get_cat.rs  list_adopted_cat.graphql  list_adopted_cat.rs  list_announcement.graphql  list_announcement.rs  list_cat.graphql  list_cat.rs  schema.json
priv/repo/: seeds.exs
test/: test_helper.exs
test/kotkowo/: client_test.exs
test/support/: conn_case.ex  data_case.ex
(+168 files in other folders)
