[package]
name = "client"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
serde = { version = "1.0.183", features = ["derive"] }
kotkowo-client = { git = "https://github.com/kotkowo/kotkowo-client", features = ["elixir_support"], tag = "v0.2.4" }
#kotkowo-client = { path="../../../kotkowo-client", features = ["elixir_support"] }

