[package]
name = "strapiclient"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "strapiclient"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["serde"] }
derivative = "2.2.0"
graphql_client = "0.13.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rustler = "0.29.1"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
